--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,7 +178,7 @@ services:
       - ICON_SRC=https://i.ytimg.com/vi/JUMufld7UcY/maxresdefault.jpg
       - THEME=LightSteelBlue
       - PORT=3003
-      - NAME=Acme Corporation
+      - NAME=Universidad Carlos III
       - EMAIL=admin@uc3m.com
       - PASSWORD=123
       - USERNAME=uc3m
