--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,7 +149,7 @@ services:
     command: "bash -c 'sleep 10; npm start'"
     environment:
       - TIPO=universidad
-      - ICON_SRC=https://cdn2.iconfinder.com/data/icons/bubble-education-icons-1/360/School-512.png
+      - ICON_SRC=https://www.upm.es/sfs/Rectorado/Gabinete%20del%20Rector/Logos/UPM/Logotipo/LOGOTIPO%20linea%20PDF%20p.png
       - THEME=OliveDrab
       - PORT=3002
       - NAME=UPM
@@ -178,7 +178,7 @@ services:
     command: "bash -c 'sleep 10; npm start'"
     environment:
       - TIPO=universidad
-      - ICON_SRC=https://mastersonlineempresa.uc3m.es/wp-content/uploads/2018/11/logo-800x237.png
+      - ICON_SRC=https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Logo_UC3M.svg/1200px-Logo_UC3M.svg.png
       - THEME=LightSteelBlue
       - PORT=3003
       - NAME=UC3M
