cambios visuales mensajes.ejs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,7 @@ services:
       - THEME=DarkGray
       - PORT=3000
       - NAME=MARCOS
+      - IDENTIFICADOR= 056965472J
       - EMAIL=marcos@upm.es
       - PASSWORD=123
       - USERNAME=marcos
